@@ -5,6 +5,8 @@
 	reworked part of t/File-Find-Rule.t to not assume that t/foobar will
 	always be 10 bytes in size. (rt.cpan.org #3838)
 
+	now we install the findrule script
+
 0.24 Monday 6th October, 2003
 	when you specify an extra of C<{ follow => 1 }> File::Find stops
 	populating $File::Find::topdir.  This leads to warnings noise so
